feat: implement role-permission mapper
